[project]
name = "cacophony"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jackson Goode", email = "jacksongoode@proton.me" }
]
dependencies = [
    "orjson",
    "pyo",
    "selenium",
    "webdriver_manager",
    "yt-dlp",
    "aiohttp>=3.9.5",
    "opencv-python>=4.9.0.80",
    "screeninfo>=0.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cacophony"]
